--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.revert-tailwind {
+     all: initial;
+ }
+
+.revert-tailwind>* {
+     all: revert;
+ }
